@@ -12,6 +12,7 @@ Version 3.9.18
 - Fixed a bug in looking for files when multiple .. are given
 - Fixed <> operator in BASIC
 - Fixed array indexing with floats (they need to be converted to int)
+- Fixed setbyte/setword/setnib abbreviations
 
 Version 3.9.17
 - Fixed a serious unsigned / unsigned division bug
